--- a/Lab5/Validation/Views/RegistrationForm/Index.cshtml
+++ b/Lab5/Validation/Views/RegistrationForm/Index.cshtml
@@ -9,21 +9,24 @@
         <div class="form-group col-12 col-sm-6">
             <label asp-for="FirstName"></label>
             <input asp-for="FirstName" class=form-control/>
+            <span asp-validation-for="FirstName"></span>
         </div>
         <div class="form-group col-12 col-sm-6">
             <label asp-for="LastName"></label>
             <input asp-for="LastName" class="form-control"/>
-            @Html.ValidationMessageFor(m => m.LastName)
+            <span asp-validation-for="LastName"></span>
         </div>
     </div>
     <div class="form-group">
         <label asp-for="EmailAddress"></label>
         <input asp-for="EmailAddress" class="form-control"/>
+        <span asp-validation-for="EmailAddress"></span>
         
     </div>
     <div class="form-group">
         <label asp-for="PhoneNumber"></label>
         <input asp-for="PhoneNumber" class="form-control"/>
+        <span asp-validation-for="PhoneNumber"></span>
         
     </div>
     
