Final Project section added but contact page not working

--- a/Assignment 2/Views/Home/Index.cshtml
+++ b/Assignment 2/Views/Home/Index.cshtml
@@ -14,6 +14,10 @@
         <p>There would be a way to switch between the calendar view and the list view for the application. There will be ways to add and remove tasks that need to be completed
             and to mark certain tasks as completed or not. There will also be a way to save the calendar information into a json file and upload a previous one as well.
         </p>
+        <p>
+            Users will be able to log in with an account and view their calendar. Anonymous users will be able to use the application but will only be able to save to file not 
+            to their account. Administrators will be able to remove user accounts and edit calendars.
+        </p>
     </div>
 </body>
 
