--- a/Assignment 2/Views/Contact/ContactResult.cshtml
+++ b/Assignment 2/Views/Contact/ContactResult.cshtml
@@ -1,4 +1,5 @@
-@model Contact.ContactFormModel
+@model ContactFormModel
 
 <p>@Model.FirstName @Model.LastName</p>
-<p>@Model.Email</p>
+<p>@Model.Address</p>
+<p>@Model.City, @Model.State @Model.ZipCode</p>
