--- a/Assignment 2/Views/Contact/ContactHTML.cshtml
+++ b/Assignment 2/Views/Contact/ContactHTML.cshtml
@@ -1,8 +1,54 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <title>Contact - HTML</title>
-    </head>
+@model ContactFormModel
 
-</html>
+<div class="container text-center">
+    <div class="row">
+        <div class="col">
+            <h1>Contact Me</h1>
+        </div>
+    </div>
+    <form action="Result"method="post">
+        <div class="row">
+            <div class="form-group col-lg-6 text-start col-sm-12">
+                <label for="FirstName">First Name</label>
+                <input type="text" class="form-control" id="FirstName" name="FirstName" />
+
+                @Html.ValidationMessageFor(m => m.FirstName)
+            </div>
+            <div class="form-group col-lg-6 text-start col-sm-12">
+                <label for="LastNaem">Last Name</label>
+                <input type="text" class="form-control" id="LastName" name="LastName" />
+
+                @Html.ValidationMessageFor(m => m.LastName)
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-lg-12 text-start col-sm-12">
+                <label for="Address">Address</label>
+                <input type="text" class="form-control" id="Address" name="Address" />
+
+                @Html.ValidationMessageFor(m => m.Address)
+            </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-lg-4 text-start col-sm-12">
+                <label for="City">City</label>
+                <input type="text" class="form-control" id="City" name="City" />
+
+                @Html.ValidationMessageFor(m => m.City)
+            </div>
+            <div class="form-group col-lg-4 text-start col-sm-12">
+                <label for="State">State</label>
+                <input type="text" class="form-control" id="State" name="State" />
+
+                @Html.ValidationMessageFor(m => m.State)
+            </div>
+            <div class="form-group col-lg-4 text-start col-sm-12">
+                <label for="ZipCode">Zip Code</label>
+                <input type="text" class="form-control" id="ZipCode" name="ZipCode" />
+
+                @Html.ValidationMessageFor(m => m.ZipCode)
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
