--- a/Assignment 2/Views/Contact/ContactTagHelper.cshtml
+++ b/Assignment 2/Views/Contact/ContactTagHelper.cshtml
@@ -1,41 +1,48 @@
-@model Contact.ContactFormModel
+@model ContactFormModel
 
-<!DOCTYPE html>
-<html>
-
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Contact - TagHelper</title>
-</head>
-
-<body>
-    <div class="container text-center">
+<div class="container text-center">
+    <div class="row">
+        <div class="col">
+            <h1>Contact Me</h1>
+        </div>
+    </div>
+    <form asp-action="ContactResult" asp-controller="Contact" method="post">
         <div class="row">
-            <div class="col">
-                <h1>Contact Page</h1>
+            <div class="form-group col-lg-6 text-start col-sm-12">
+                <label asp-for="FirstName"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName"></span>
+            </div>
+            <div class="form-group col-lg-6 text-start col-sm-12">
+                <label asp-for="LastName"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName"></span>
             </div>
         </div>
-        <form asp-action="../Result" asp-controller="Contact" method="post">
-            <div class="row">
-                <div class="form-group col-6">
-                    <label asp-for="FirstName"></label>
-                    <input asp-for="FirstName" class=form-control />
-                    <span asp-validation-for="FirstName"></span>
-                </div>
-                <div class="form-group col-6">
-                    <label asp-for="LastName"></label>
-                    <input asp-for="LastName" class=form-control />
-                    <span asp-validation-for="LastName"></span>
-                </div>
+        <div class="row">
+            <div class="form-group col-lg-12 text-start col-sm-12">
+                <label asp-for="Address"></label>
+                <input asp-for="Address" class="form-control" />
+                <span asp-validation-for="Address"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class=form-control />
-                <span asp-validation-for="Email"></span>
+        </div>
+        <div class="row">
+            <div class="form-group col-lg-4 text-start col-sm-12">
+                <label asp-for="City"></label>
+                <input asp-for="City" class="form-control" />
+                <span asp-validation-for="City"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-</body>
-
-</html>
+            <div class="form-group col-lg-4 text-start col-sm-12">
+                <label asp-for="State"></label>
+                <input asp-for="State" class="form-control" />
+                <span asp-validation-for="State"></span>
+            </div>
+            <div class="form-group col-lg-4 text-start col-sm-12">
+                <label asp-for="ZipCode"></label>
+                <input asp-for="ZipCode" class="form-control" />
+                <span asp-validation-for="ZipCode"></span>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
