--- a/Assignment 2/Views/Home/Index.cshtml
+++ b/Assignment 2/Views/Home/Index.cshtml
@@ -1,24 +1,16 @@
-<!DOCTYPE html>
-<html>
 
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Home</title>
-</head>
-
-<body>
-    <div class=".container-md text-center">
-        <h1>A Monthly Planner</h1>
-        <p>This would be an application that helps with labelling things that need to be completed in a calendar and
-            list style format</p>
-        <p>There would be a way to switch between the calendar view and the list view for the application. There will be ways to add and remove tasks that need to be completed
-            and to mark certain tasks as completed or not. There will also be a way to save the calendar information into a json file and upload a previous one as well.
-        </p>
-        <p>
-            Users will be able to log in with an account and view their calendar. Anonymous users will be able to use the application but will only be able to save to file not 
-            to their account. Administrators will be able to remove user accounts and edit calendars.
-        </p>
-    </div>
-</body>
-
-</html>
+<div class=".container-md text-center">
+    <h1>A Monthly Planner</h1>
+    <p>
+        This would be an application that helps with labelling things that need to be completed in a calendar and
+        list style format
+    </p>
+    <p>
+        There would be a way to switch between the calendar view and the list view for the application. There will be ways to add and remove tasks that need to be completed
+        and to mark certain tasks as completed or not. There will also be a way to save the calendar information into a json file and upload a previous one as well.
+    </p>
+    <p>
+        Users will be able to log in with an account and view their calendar. Anonymous users will be able to use the application but will only be able to save to file not
+        to their account. Administrators will be able to remove user accounts and edit calendars.
+    </p>
+</div>
