--- a/FinalProject/Views/Home/AddTask.cshtml
+++ b/FinalProject/Views/Home/AddTask.cshtml
@@ -5,4 +5,24 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<form asp-action="AddTask" asp-controller="Home" method="POST">
+    <div class="form-group row">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" placeholder="Name (required)"/>
+        <span asp-validation-for="Name"></span>
+    </div>
+    <div class="form-group row">
+        <label asp-for="Description"></label>
+        <textarea asp-for="Description" placeholder="Description (optional)"></textarea>
+        <span asp-validation-for="Description"></span>
+    </div>
+    <div class="form-group row">
+        <label asp-for="DueDate"></label>
+        <input asp-for="DueDate" class="form-control" />
+        <span asp-validation-for="DueDate"></span>
+    </div>
+    
+    <div class="form-group row">
+        <button type="submit" class="btn btn-primary">Add Task</button>
+    </div>
+</form>
