--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -11,7 +11,6 @@
         }
         else
         {
-
             <form asp-action="Index" asp-controller="Home" method="post">
                 <div class="position-fixed end-0 top-50">
                     <button type="submit" class="btn btn-primary">Save</button>
@@ -21,6 +20,11 @@
             {
                 <partial name="_TaskPartial" for="@Model.Tasks[i]" />
             }
+            </form>
+            <form asp-action="File" asp-controller="Home" method="get">
+                <div class="position-fixed end-0 bottom-0">
+                    <button type="submit" class="btn btn-secondary">Get File</button>
+                </div>
             </form>
         }
     }
